A little bit of documentation...
... everyone writes documentation when it's
actually self promotion ;)

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,6 +42,8 @@
         </a> is powered by <a href="http://www.guardian.co.uk">The Guardian's</a>
         <a href="http://content.guardianapis.com">Open Platform Content API</a>.
 
+        Written by Graham Tackley, source code and more information on <a href="https://github.com/tackley/travel-map">github</a>.
+
     </footer>
 </div>
 
